add basics of borrowing book
